--- a/css/integrantes.css
+++ b/css/integrantes.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -93,7 +94,8 @@ body {
 
 #zona1 {
     margin-top: -68px;
-    background: url(/img/IronMan.jpg) no-repeat;
+    background-image: url(/img/IronMan.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
    
@@ -108,43 +110,38 @@ body {
     max-width: 50%;
     margin: 50px auto 20px;
     text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
  
 h1 {
     justify-content: center;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     color: blue;
     font-size: 50px;
 }
 
-/* h1:hover {
-    color: rgb(126, 23, 243);
-} */
-
 h2 {
-    color:salmon;
+    color: yellow;
     margin-bottom: 12px;
     font-size: 36px;
 }
-
-/* h2:hover {
-    color:white;
-} */
-
 
 .lista-integrantes {
     list-style: none;
     padding: 0;
     overflow: hidden; /* Oculta el contenido que se desborda */
+
 }
 
 .integrante {
+    font-family: "Bebas Neue", sans-serif;
     background-color: #3498db;
     color: #fff;
     padding: 10px;
     margin: 5px;
     border-radius: 50px;
     font-size: 30px;
+    letter-spacing: 1.4px;
     display: block;
 
     animation: enbloque 10s linear infinite;  /* tarda 10 segundos en pasar todos los nombres */
@@ -152,7 +149,8 @@ h2 {
 
 @keyframes enbloque {
     0%, 100% {
-        transform: translateY(-459%);
+        /* transform: translateY(-459%);  este % es para 4 renglones*/
+        transform: translateY(-336%);
     }
     25% {
         transform: translateY(0);
@@ -185,7 +183,7 @@ div.contanier-nombres {
 }
 
 /* ************* Segundo renglon *********** */
-.nombre2 {
+/* .nombre2 {
     color: #008000;
     text-shadow: 4px 2px #ffffff;
 
@@ -199,7 +197,7 @@ div.contanier-nombres {
     to {
         transform: translateX(-16%);
     }
-}
+} */
 
 /* ************* Tercer renglon *********** */
 .nombre3 {
@@ -276,16 +274,57 @@ div.contanier-nombres {
         padding: 7px 10px;
         background-color: transparent;
         /* color | offset-x | offset-y | blur-radius */
-        text-shadow: #ffffff 1px 0 10px;
+        text-shadow: 1px 0 10px #ffffff;
     }
 
     #menu:checked ~ .navbar {
         display: initial;
      }
+}
 
-    .header-content {
-        flex-direction: colum;
-        padding: 180px 30px 30px 30px;
+
+
+/**************************************/
+/* */
+@media (max-width:600px) {
+    .integrante {
+        padding: 7px;
+        margin: 4px;
+        font-size: 26px;
     }
 
+    div.contanier-nombres {
+        font-size: 3.5rem;
+    }    
+}
+
+/* */
+@media (max-width:490px) {
+    .menu {
+        justify-content: space-between;
+    }
+
+    h1 {
+        font-family: "Bebas Neue", sans-serif;
+        justify-content: center;
+        margin-bottom: 10px;
+        font-size: 26px;
+    }
+    
+    h2 {
+        margin-bottom: 10px;
+        font-size: 16px;
+    }
+
+    .integrante {
+        padding: 5px;
+        margin: 2px;
+        font-size: 16px;
+        letter-spacing: 1.2px;
+    }
+
+    div.contanier-nombres {
+        font-size: 2.8em;
+    }   
+    
 }
