--- a/css/styles.css
+++ b/css/styles.css
@@ -343,18 +343,25 @@ hr {
     display: flex;
 }
 
-footer .logo-opciones h3 {
+
+/* footer .logo-opciones h3 {
+    font-size: 30px;
+} */
+
+/* es este <a> o el h3 de arriba */
+footer .logo-opciones .logo-footer {
+    color: #ffffff;
     font-size: 30px;
 }
 
-.footer .logo-opciones a {
+.footer .logo-opciones ul li a {
     color: #ffffff;
     font-size: 20px;
     margin-right: 20px;
     display: block;
 }
 
-.footer a:hover {
+.footer ul li a:hover {
     color: #ff2f28;
 }
 
@@ -405,7 +412,7 @@ footer .logo-opciones h3 {
         padding: 7px 10px;
         background-color: transparent;
         /* color | offset-x | offset-y | blur-radius */
-        text-shadow: #ffffff 1px 0 10px;
+        text-shadow: 1px 0 10px #ffffff;
     }
     
     #menu:checked ~ .navbar {
@@ -465,7 +472,7 @@ footer .logo-opciones h3 {
 /* */
 @media (max-width:490px) {
     .menu {
-        justify-content: space-around;
+        justify-content: space-between;
     }
 
     /* .header-2 {
