--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,7 @@ hr {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 100px 0 50px;
+    padding: 50px 0 30px;
     margin-top: 100px;
     border-top: 1px solid #ff2f283D;
 }
@@ -365,12 +365,22 @@ footer .logo-opciones .logo-footer {
     color: #ff2f28;
 }
 
+.footer .footer-politicas {
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.footer .footer-politicas a {
+    color: #ffffff;
+}
+
 .footer .footer-copyright {
     display: flex;
     justify-content: center;
     color: #295C6D;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
+
 
 /* ****** Medias query ****** */
 /* ************************** */
