--- a/src/static/css/navbar2.css
+++ b/src/static/css/navbar2.css
@@ -4,7 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
   }
   
-  .navbar a button {
+  .navbar a {
     float: left;
     font-size: 16px;
     color: white;
@@ -13,6 +13,15 @@
     text-decoration: none;
   }
   
+  .navbar button {
+    float: right;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
   .dropdown {
     float: left;
     overflow: hidden;
