--- a/src/static/css/navbar2.css
+++ b/src/static/css/navbar2.css
@@ -16,7 +16,7 @@
   .navbar button {
     float: right;
     font-size: 16px;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -32,7 +32,7 @@
     font-size: 16px;  
     border: none;
     outline: none;
-    color: white;
+    color: black;
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
@@ -54,6 +54,7 @@
   
   .dropdown-content a {
     float: none;
+    margin-top: 40px;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
