--- a/src/static/css/navbar2.css
+++ b/src/static/css/navbar2.css
@@ -45,7 +45,7 @@
   
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -54,7 +54,6 @@
   
   .dropdown-content a {
     float: none;
-    margin-top: 40px;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
