--- a/src/static/css/navbar2.css
+++ b/src/static/css/navbar2.css
@@ -45,7 +45,8 @@
   
   .dropdown-content {
     display: none;
-    position: absolute;
+    /*position: absolute;*/
+    margin-top: 40px;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
