--- a/src/static/css/navbar2.css
+++ b/src/static/css/navbar2.css
@@ -39,14 +39,15 @@
     margin: 0;
   }
   
-  .navbar a:hover, .dropdown:hover, .dropbtnPeli .dropbtnActor .dropbtnGenero .dropbtnDirec, .dropbtnPeli:focus, .dropbtnDirec:focus, .dropbtnActor:focus, .dropbtnGenero:focus {
+  .navbar a:hover, .dropdown:hover, .dropbtnPeli:focus, .dropbtnDirec:focus, .dropbtnActor:focus, .dropbtnGenero:focus {
     background-color: red;
   }
   
   .dropdown-content {
     display: none;
-    /*position: absolute;*/
-    margin-top: 40px;
+    position: absolute;
+    left: 0;
+    width: 100%;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
